maj: Update launch configuration, enhance FireSimulationModel, and add pom.xml for Maven support